selected img url

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
       <nav class="nav">
         <ul>
           <li class="tab" data-tab="submit"><a href="/postNew/post">Shame!</a></li>
-          <li class="tab" data-tab="leaderboard"><a href="/leaderboard">Leaderboard</a></li>
+          <!-- <li class="tab" data-tab="leaderboard"><a href="/leaderboard">Leaderboard</a></li> -->
           <li class="tab" data-tab="search"><a href="/search">Search</a></li>
         </ul>
       </nav>
@@ -152,7 +152,7 @@
             <br>
             <input type="text" id="plateField" maxlength="8" placeholder="License Plate Number" required>
             <br><br>
-            <select name="make" id="makeField" required >
+            <select name="make" id="makeField" required>
               <option value="">-- Make --</option>
             </select>
             <select name="model" id="modelField" required>
